src/evaluator/expression/prefix/tests/snapshots/monkey_interpreter__evaluator__expression__prefix__tests__test_evaluator_minus_prefix_nodes_case2.snap
---
source: src/evaluator/expression/prefix/tests/mod.rs
expression: "evaluator.evaluate(crate::syntax_analysis::SyntaxAnalysis::from(crate::lexical_analysis::LexicalAnalysis::from(code).unwrap()).unwrap())"

---
Ok(
    Integer {
        value: -10,
    },
)
