src/evaluator/expression/prefix/tests/snapshots/monkey_interpreter__evaluator__expression__prefix__tests__test_evaluator_not_prefix_nodes_case3.snap
---
source: src/evaluator/expression/prefix/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::evaluator::evaluator_context::EvaluatorContext::new(),\n                           crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code)))"
---
(
    EvaluatorContext,
    FALSE,
)
