src/evaluator/expression/prefix/tests/snapshots/monkey_interpreter__evaluator__expression__prefix__tests__test_evaluator_unknown_operator_prefix_nodes_case3.snap
---
source: src/evaluator/expression/prefix/tests/mod.rs
expression: "crate::evaluator::evaluate(crate::evaluator::model::evaluator_context::EvaluatorContext::new(),\n                           crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::LexicalAnalysis::from(code)))"

---
(
    EvaluatorContext,
    UnknownOperator,
)
